Support for mono (Linux)

--- a/ENet.Managed/ENetBinariesResource.resx
+++ b/ENet.Managed/ENetBinariesResource.resx
@@ -124,4 +124,10 @@
   <data name="libenet_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\libenet64.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="libenet_X64_so" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\libenet_X64.so.7.0.1;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="libenet_X86_so" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\libenet_X86.so.7.0.1;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
