--- a/src/ENet.Managed/ENetBinariesResource.resx
+++ b/src/ENet.Managed/ENetBinariesResource.resx
@@ -118,8 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="enet-linux-arm" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\..\binaries\enet-linux-arm.so;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="enet-linux-arm32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\binaries\enet-linux-arm32.so;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="enet-linux-arm64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\binaries\enet-linux-arm64.so;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -130,8 +130,8 @@
   <data name="enet-linux-x86-64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\binaries\enet-linux-x86-64.so;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="enet-win32-arm" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\..\binaries\enet-win32-arm.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="enet-win32-arm64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\..\binaries\enet-win32-arm64.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="enet-win32-x86" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\..\binaries\enet-win32-x86.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
